@@ -355,7 +355,7 @@ receiver {
 .Xr auditdistd 8 .
 .Sh AUTHORS
 The
-.Nm
-was written by
+.Nm auditdistd
+was developed by
 .An Pawel Jakub Dawidek Aq pawel@dawidek.net
 under sponsorship of the FreeBSD Foundation.
